--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
+		"@supabase/ssr": "^0.5.2",
+		"@supabase/supabase-js": "^2.48.1",
 		"axios": "^1.7.9",
 		"lucide-react": "^0.471.1",
 		"next": "15.1.6",
@@ -17,7 +19,8 @@
 		"react": "18.2.0",
 		"react-countup": "^6.5.3",
 		"react-dom": "18.2.0",
-		"react-hot-toast": "^2.5.1"
+		"react-hot-toast": "^2.5.1",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.8.4",
