--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
-		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.48.1",
 		"axios": "^1.7.9",
 		"lucide-react": "^0.471.1",
-		"next": "15.1.6",
+		"next": "^15.2.4",
 		"next-pwa": "^5.6.0",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
