--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prisma:generate": "prisma generate",
+		"prisma:migrate": "prisma migrate deploy",
+		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
+		"@prisma/client": "^6.5.0",
 		"axios": "^1.7.9",
+		"bcryptjs": "^3.0.2",
+		"date-fns": "^4.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.471.1",
 		"next": "^15.2.4",
 		"next-pwa": "^5.6.0",
@@ -21,6 +28,8 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20.8.4",
 		"@types/react": "^18.2.28",
 		"autoprefixer": "^10.4.16",
@@ -30,6 +39,7 @@
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.5",
+		"prisma": "^6.5.0",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-safe-area": "^0.4.1",
 		"typescript": "^5.2.2"
