--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
 		"date-fns": "^4.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.471.1",
-		"next": "^15.2.4",
-		"next-pwa": "^5.6.0",
+		"next": "^16.0.4",
 		"next-themes": "^0.2.1",
-		"react": "18.2.0",
+		"react": "^19.2.0",
 		"react-countup": "^6.5.3",
-		"react-dom": "18.2.0",
+		"react-dom": "^19.2.0",
 		"react-hot-toast": "^2.5.1",
 		"zod": "^3.24.2"
 	},
