--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-countup": "^6.5.3",
 		"react-dom": "^19.2.0",
 		"react-hot-toast": "^2.5.1",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
