--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
-		"@prisma/client": "^6.5.0",
+		"@prisma/adapter-better-sqlite3": "^7.0.1",
+		"@prisma/client": "^7.0.1",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
+		"better-sqlite3": "^12.4.6",
 		"date-fns": "^4.1.0",
+		"dotenv": "^17.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.471.1",
 		"next": "^16.0.4",
@@ -29,8 +32,9 @@
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
+		"@types/better-sqlite3": "^7.6.13",
 		"@types/jsonwebtoken": "^9.0.9",
-		"@types/node": "^20.8.4",
+		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.51.0",
@@ -39,10 +43,14 @@
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.5",
-		"prisma": "^6.5.0",
+		"prisma": "^7.0.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-safe-area": "^0.4.1",
 		"typescript": "^5.2.2"
+	},
+	"overrides": {
+		"hono": "^4.10.3",
+		"valibot": "^1.2.0"
 	},
 	"prettier": {
 		"semi": false,
