--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
 		"@headlessui/react": "^2.2.0",
 		"@prisma/adapter-better-sqlite3": "^7.0.1",
 		"@prisma/client": "^7.0.1",
+		"@radix-ui/react-slot": "^1.2.4",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
 		"better-sqlite3": "^12.4.6",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"jsonwebtoken": "^9.0.2",
-		"lucide-react": "^0.471.1",
+		"lucide-react": "^0.471.2",
 		"next": "^16.0.4",
 		"next-themes": "^0.2.1",
 		"react": "^19.2.0",
 		"react-countup": "^6.5.3",
 		"react-dom": "^19.2.0",
 		"react-hot-toast": "^2.5.1",
+		"tailwind-merge": "^3.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
 	},
@@ -41,8 +45,8 @@
 		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
 		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.5",
+		"prettier": "^3.6.2",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"prisma": "^7.0.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-safe-area": "^0.4.1",
