--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@tailwindcss/postcss": "^4.1.17",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
-		"autoprefixer": "^10.4.16",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
 		"postcss": "^8.4.31",
 		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.5.14",
+		"prettier-plugin-tailwindcss": "^0.7.1",
 		"prisma": "^7.0.1",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.17",
 		"tailwindcss-safe-area": "^0.4.1",
 		"typescript": "^5.2.2"
 	},
