--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"@headlessui/react": "^2.2.0",
 		"@prisma/adapter-better-sqlite3": "^7.0.1",
 		"@prisma/client": "^7.0.1",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
@@ -28,6 +31,7 @@
 		"next-themes": "^0.2.1",
 		"react": "^19.2.0",
 		"react-countup": "^6.5.3",
+		"react-day-picker": "^9.11.2",
 		"react-dom": "^19.2.0",
 		"react-hot-toast": "^2.5.1",
 		"tailwind-merge": "^3.4.0",
