--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prisma:generate": "prisma generate",
-		"prisma:migrate": "prisma migrate deploy",
+		"prisma:migrate": "prisma migrate",
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
+		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-better-sqlite3": "^7.0.1",
 		"@prisma/client": "^7.0.1",
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.8",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
 		"better-sqlite3": "^12.4.6",
@@ -33,7 +40,9 @@
 		"react-countup": "^6.5.3",
 		"react-day-picker": "^9.11.2",
 		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.66.1",
 		"react-hot-toast": "^2.5.1",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
@@ -45,6 +54,7 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
+		"baseline-browser-mapping": "^2.8.32",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
