--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prisma:generate": "prisma generate",
-		"prisma:migrate": "prisma migrate",
+		"prisma:migrate": "prisma migrate deploy",
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
@@ -15,7 +15,9 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-better-sqlite3": "^7.0.1",
 		"@prisma/client": "^7.0.1",
+		"@radix-ui/react-avatar": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-progress": "^1.1.8",
