--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"dotenv": "^17.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.471.2",
-		"next": "^16.0.4",
+		"next": "16.0.7",
 		"next-themes": "^0.2.1",
 		"react": "^19.2.0",
 		"react-countup": "^6.5.3",
