update dashboard with animations, brew suggestions, brew schema update
- added framer-motion to animate layout changes on dashboard
- added interpolation for scale data
- added brew carousel to dashboard
- added logic to prefill brew form based on carousel suggestions
- removed brewDate from brew schema, just use createdAt instead
- added decafStartHour to user model
- misc layout changes

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.3",
+		"embla-carousel-react": "^8.6.0",
+		"framer-motion": "^12.23.26",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.471.2",
 		"next": "^16.0.7",
