--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"react-hook-form": "^7.66.1",
 		"react-hot-toast": "^2.5.1",
 		"sonner": "^2.0.7",
+		"swr": "^2.3.8",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
