--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
 		"next-themes": "^0.2.1",
 		"react": "^19.2.0",
 		"react-countup": "^6.5.3",
-		"react-day-picker": "^9.11.2",
+		"react-day-picker": "^9.13.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.66.1",
 		"react-hot-toast": "^2.5.1",
+		"recharts": "^3.6.0",
 		"sonner": "^2.0.7",
 		"swr": "^2.3.8",
 		"tailwind-merge": "^3.4.0",
