--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"@number-flow/react": "^0.5.10",
 		"@prisma/adapter-better-sqlite3": "^7.0.1",
 		"@prisma/client": "^7.2.0",
 		"@radix-ui/react-accordion": "^1.2.12",
