--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
 		"better-sqlite3": "^12.4.6",
+		"chroma-js": "^3.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
@@ -58,6 +59,7 @@
 		"@tailwindcss/postcss": "^4.1.17",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/better-sqlite3": "^7.6.13",
+		"@types/chroma-js": "^3.1.2",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
