--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"swr": "^2.3.8",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^13.0.0",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
@@ -63,6 +64,7 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
+		"@types/uuid": "^10.0.0",
 		"baseline-browser-mapping": "^2.8.32",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "^13.5.4",
