--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"build:lite": "NEXT_PUBLIC_LITE=true next build",
 		"start": "next start",
 		"lint": "next lint",
 		"prisma:generate": "prisma generate",
@@ -65,7 +66,7 @@
 		"@types/node": "^20.19.25",
 		"@types/react": "^18.2.28",
 		"@types/uuid": "^10.0.0",
-		"baseline-browser-mapping": "^2.8.32",
+		"baseline-browser-mapping": "^2.9.19",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
